--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "A Redux-powered shopping app",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "open-props": "^1.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+    "react-redux": "^7.2.6",
+    "react-scripts": "5.0.0",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
