--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "description": "A Redux-powered shopping app",
   "private": true,
+  "homepage": "https://efmmoncada.github.io/penny-shop-redux/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "gh-pages": "^3.2.3",
     "open-props": "^1.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -13,6 +15,8 @@
     "redux": "^4.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
